--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
       <div class="mascot" id="mascot">
         <video
-          src="./assets/img/mascot_message.mp4"
+          src="https://firebasestorage.googleapis.com/v0/b/fir-project-93f27.appspot.com/o/mascot_message.mp4?alt=media&token=cd156d46-d594-46d9-918b-a50585d3e9a8"
           id="mascot_message"
           autoplay
           muted
