--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <main>
       <img
         class="alogo"
-        src="./assets/img/adhyaaya-logo-no tagline.png"
+        src="./assets/img/Adhyaaya'22 logo finalxxx.png"
         alt="logo"
       />
       <div class="card77">
@@ -64,7 +64,7 @@
           <div class="square1"></div>
           <div class="square2"></div>
           <video
-            width="700px"
+            width="700vw"
             id="loopvideo"
             onclick="document.getElementById('termspop').style.display='block'"
             autoplay
@@ -152,13 +152,13 @@
       </div>
 
       <div class="mascot" id="mascot">
-        <video
+        <!-- <video
           src="https://firebasestorage.googleapis.com/v0/b/fir-project-93f27.appspot.com/o/mascot_message.mp4?alt=media&token=cd156d46-d594-46d9-918b-a50585d3e9a8"
           id="mascot_message"
           autoplay
           muted
           loop
-        ></video>
+        ></video> -->
       </div>
     </main>
 
