--- a/index.html
+++ b/index.html
@@ -60,6 +60,66 @@
         </div>
       </div>
       <div class="maincontainer">
+        <div class="maintitle2">
+          <div class="titlecontent">
+            <img
+              class="mobile-logo"
+              src="./assets/img/adhyaaya-logo-no tagline.png"
+              alt="logo"
+            />
+            <h1>Stay Tuned</h1>
+            <a href="#"><h2>CA - Portal</h2></a>
+            <div class="footer-sco">
+              <a href="mailto:adhyaaya.gcoen@gmail.com" target="_blank"
+                ><i
+                  class="bx bx-envelope ss1"
+                  id="socials11"
+                  onmouseover="document.getElementById('socials11').className = 'bx bx-envelope bx-tada ss1';"
+                  onmouseout="document.getElementById('socials11').className = 'bx bx-envelope ss1';"
+                ></i
+              ></a>
+              <a
+                href="https://www.youtube.com/channel/UCQgGGoNJaQRxs5myAZTcbsQ"
+                target="_blank"
+                ><i
+                  class="bx bxl-youtube ss1"
+                  id="socials21"
+                  onmouseover="document.getElementById('socials21').className = 'bx bxl-youtube bx-tada ss1';"
+                  onmouseout="document.getElementById('socials21').className = 'bx bxl-youtube ss1';"
+                ></i
+              ></a>
+              <a
+                href="https://www.instagram.com/adhyaaya.gcoen/"
+                target="_blank"
+                ><i
+                  class="bx bxl-instagram ss1"
+                  id="socials31"
+                  onmouseover="document.getElementById('socials31').className = 'bx bxl-instagram bx-tada ss1';"
+                  onmouseout="document.getElementById('socials31').className = 'bx bxl-instagram ss1';"
+                ></i
+              ></a>
+              <a
+                href="https://www.linkedin.com/company/adhyaaya/"
+                target="_blank"
+                ><i
+                  class="bx bxl-linkedin ss1"
+                  id="socials41"
+                  onmouseover="document.getElementById('socials41').className = 'bx bxl-linkedin bx-tada ss1';"
+                  onmouseout="document.getElementById('socials41').className = 'bx bxl-linkedin ss1';"
+                ></i
+              ></a>
+              <a href="https://twitter.com/Adhyaaya_GCOEN" target="_blank"
+                ><i
+                  class="bx bxl-twitter ss1"
+                  id="socials51"
+                  onmouseover="document.getElementById('socials51').className = 'bx bxl-twitter bx-tada ss1';"
+                  onmouseout="document.getElementById('socials51').className = 'bx bxl-twitter ss1';"
+                ></i
+              ></a>
+            </div>
+            <!-- <img class="message" src="./assets/img/message.png" alt="message" /> -->
+          </div>
+        </div>
         <div class="eastereggs">
           <div class="square1"></div>
           <div class="square2"></div>
@@ -102,7 +162,6 @@
           </div>
         </div>
         <div class="maintitle">
-          <img class="message" src="./assets/img/message.png" alt="message" />
           <div class="titlecontent">
             <h1>Stay Tuned</h1>
             <a href="#"><h2>CA - Portal</h2></a>
@@ -154,19 +213,12 @@
                 ></i
               ></a>
             </div>
+            <!-- <img class="message" src="./assets/img/message.png" alt="message" /> -->
           </div>
         </div>
       </div>
 
-      <div class="mascot" id="mascot">
-        <!-- <video
-          src="https://firebasestorage.googleapis.com/v0/b/fir-project-93f27.appspot.com/o/mascot_message.mp4?alt=media&token=cd156d46-d594-46d9-918b-a50585d3e9a8"
-          id="mascot_message"
-          autoplay
-          muted
-          loop
-        ></video> -->
-      </div>
+      <div class="mascot" id="mascot"></div>
     </main>
 
     <!-- JS -->
